docs: ensure static content is owned by the non-root user

--- a/examples/counter-basic/Dockerfile
+++ b/examples/counter-basic/Dockerfile
@@ -9,8 +9,8 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o /entrypoint
 # Deploy.
 FROM gcr.io/distroless/static-debian11 AS release-stage
 WORKDIR /
-COPY --from=build-stage /entrypoint /entrypoint
-COPY --from=build-stage /app/assets /assets
+COPY --chown=nonroot --from=build-stage /entrypoint /entrypoint
+COPY --chown=nonroot --from=build-stage /app/assets /assets
 EXPOSE 8080
 USER nonroot:nonroot
 ENTRYPOINT ["/entrypoint"]
